# loom

./: .gitignore  README.en.md  README.md  TODO.md  USERSPACE_OVERLAP_REPORT.md  WINDOWS_OVERLAP_REPORT.md
.github/workflows/: multi-agent.yml  observer-deploy.yml  release.yml  salve_agent.yml
docs/: feature.md  算力封装的价值.md
docs/intro/: cycle.html  index.html  layer.html  platform-stack.html  references.html  related-work.html  system-abstraction.html  tier.html
docs/specs/: wt1-ablation-registry.plan.md  wt1-ablation-registry.spec.md  wt1-acceptance-golden.plan.md  wt1-acceptance-golden.spec.md  wt1-capability-snapshot.plan.md  wt1-capability-snapshot.spec.md  wt1-contract-schema.plan.md  wt1-contract-schema.spec.md  wt1-eval-runner-skeleton.plan.md  wt1-eval-runner-skeleton.spec.md  wt1-fault-injection.plan.md  wt1-fault-injection.spec.md  wt1-routing-trace.plan.md  wt1-routing-trace.spec.md  wt1-run-schema.plan.md  wt1-run-schema.spec.md
docs/superpowers/: ROADMAP.md
master_agent/: README.md
master_agent/scripts/: e2e.sh
multi-agent/: .gitignore  README.md  go.mod  go.sum
multi-agent/deploy/: README.md  agent-backends.md
multi-agent/dev/: README.md  compose.distributed.yaml  compose.multi-observer.yaml
multi-agent/docs/: spike-0-resume-tool_use.md
multi-agent/python/: README.md  pyproject.toml
multi-agent/python/src/loom/: __init__.py  _driver_bin.py  capability.py  client.py  errors.py  files.py  humanloop.py  tasks.py  workflow.py
multi-agent/python/tests/: conftest.py
multi-agent/python/tests/e2e/: conftest.py  test_case1_happy.py  test_case2_ask_user.py  test_case4_request_permission.py  test_case5_jetson.py
multi-agent/python/tests/unit/: test_capability.py  test_client.py  test_files.py  test_humanloop.py  test_tasks.py  test_workflow.py
multi-agent/scripts/: agents.sh  observer.sh  package-driver-skills.sh
multi-agent/tools/eval/mock-model/: .gitignore  README.md  pyproject.toml
multi-agent/tools/eval/mock-model/mock_model/: __init__.py  deterministic.py  models.py  server.py
multi-agent/tools/eval/mock-model/tests/: test_deterministic.py  test_server.py
salve_agent/: .gitignore  README.md  config.example.yaml  go.mod  go.sum  salve-agent
tools/eval/commit_meta/: README.md  pyproject.toml
tools/eval/commit_meta/commit_meta/: __init__.py  collect.py  git_rev.py  os_info.py  schema.py
tools/eval/commit_meta/tests/: test_collect.py  test_git_rev.py  test_os_info.py  test_schema.py
(+993 files in other folders)
